--- a/saleTax/pom.xml
+++ b/saleTax/pom.xml
@@ -8,12 +8,19 @@
   <packaging>jar</packaging>
 
   <name>saleTax</name>
-  <url>http://maven.apache.org</url>
+  <url>https://github.com/AntoAric/sales_taxes</url>
+  
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
-
+	
+   <scm>
+    <connection>scm:git:ssh://github.com/AntoAric/sales_taxes.git</connection>
+    <developerConnection>scm:git:ssh://git@github.com/AntoAric/sales_taxes.git</developerConnection>
+    <url>https://github.com/AntoAric/sales_taxes</url>
+  </scm>
+  	
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
