--- a/saleTax/pom.xml
+++ b/saleTax/pom.xml
@@ -2,9 +2,10 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>it.antoninoarico</groupId>
-  <artifactId>saleTax</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  
+  <groupId>io.packagecloud</groupId>
+  <artifactId>java-test-package</artifactId>
+  <version>0.0.1</version>
   <packaging>jar</packaging>
 
   <name>saleTax</name>
